
			     BZFlag release notes

BZFlag 1.10.4
-------------

* Added optional building density to random ctf map - Sean Morrison
* Add pause time to /idlestats - Sean Morrison
* Notify players when reassigned to a different team on join - Sean Morrison
* Allow multiple bases per team - Dave Brosius
* Use cyan for observer messages in old console color mode - Frank Thilo
* Config file based auto-identify - Tupone Alfredo, Sean Morrison, Frank Thilo
* List Server checks ip of requesting server - Tupone Alfredo
* AutoPilot does not base path on stealth echo anymore - Dave Brosius
* Alt-Tab & resolution changes does not mess up the screen - Tupone Alfredo
* No shooting allowed if OO flag is lost in a building - Tupone Alfredo
* Killed player stop drifting & clean dirty tank pieces - Tupone Alfredo
* Rabbit score changed and values displayed on HUD  - Tupone Alfredo
* Sound samples are resampled since bzflag doesn't - Tupone Alfredo
* Unclean client disconnects are recognized earlier - Tupone Alfredo
* Async communication between bzfs and list server - Tupone Alfredo
* Added bzfs -rabbit option selection algorithm support - Nils McCarthy
* Added the REQUIREIDENTIFY permission - Nils McCarthy
* Added bzfs option to deny clients that do not identify - Nils McCarthy
* Color carried team flags according to their team - Sean Morrison
* Start of better spawn positions based on tanks - Dave Brosius
* PNG image writing for screenshots - Daniel Remenak
* Texture Manager only loads textures when needed - Jeff Myers
* Renamed and reorganized texture resources - Jeff Mey
* BZDB alternate image dir added - Jeff Myers
* Improved transparent proxy support - Alfredo Tupone, Sean Morrison
* Ground Texture Repeat added to BZDB, default increased to 0.1  - Jeff Myers
* Added ability to have and use per-team colored textures - Jeff Myers
* Added support for colored and zoned ground textures - Jeff Meyers
* Hunter tanks try to use "hunter" texture if found - Jeff Myers